# SWPSoSe14

./: .gitignore  .mailmap  .travis.yml  AUTHORS  README.md  RailCompiler.prof  RailEditor.prof  SWPSoSe14.cabal  asd  asd.ll  foo  foo.ll  hello.llvm  helloW.ast  perftest.rail  rail-compiler-editor.cabal  readme.md  run-backend.sh  run-compiler.sh  run-frontend.sh  test.ll  tmp  tmp.ll
documentation/: SWPSoSe14MS1.ppt  SWPSoSe14MS2.pptm  SWPSoSe14MS3.ppt
integration-tests/: neg_IO1.io  neg_badEscapes1.io  neg_badEscapes2.io  neg_badEscapes3.io  neg_boom1.io  neg_boom1.rail  neg_boom2.rail  neg_comp_equal_one_type_mismatch2.io  neg_comp_greater_one_argument.io  neg_duplicatefunctions.io  neg_failStop1.io  neg_failStop2.io  neg_forbiddenMove6.io  neg_forbiddenMove6.rail  neg_functions1.io  neg_invalidCommand1.rail  neg_invalidCommand2.io  neg_invalidCommand2.rail  neg_invalidMove2.io  neg_invalidMove4.rail  neg_junction01.io  neg_junction04.io  neg_junction05.io  neg_junction08.io  neg_junction11.io  neg_junction_not_bool.io  neg_junction_not_bool.rail  neg_junction_type_mismatch1.io  neg_math_add_one_type_mismatch2.io  neg_math_divide_by_zero_float.io  neg_math_divide_by_zero_int.io  neg_math_divide_by_zero_int.rail  neg_math_remainder_no_argument.io  neg_math_remainder_one_type_mismatch2.io  neg_missingDollar2.io  neg_missingMain1.io  neg_missingMain2.io  neg_missingMain3.io  neg_simpleJunctionMoveCROSS2.rail  neg_simpleJunctionMoveCROSS3.rail  (+145 more)
program/: Backend.hs  CodeOptimization.hs  InterfaceDT.hs  IntermediateCode.hs  Lexer.hs  Main.hs  Preprocessor.hs  SemanticalAnalysis.hs  SyntacticalAnalysis.hs  TestBackend.hs  TestCodeOpt.hs  TestInterCode.hs  TestLexer.hs  TestPreProc.hs  TestSemAna.hs  (+3 more)
(+964 files in other folders)
