name: rail-compiler-editor
version:             0.2.0.0
synopsis: Compiler and editor for the esolang rail.
description: A compiler and a graphical editor for the esoteric programming language rail.
homepage:            https://github.com/SWP-Ubau-SoSe2014-Haskell/SWPSoSe14
license: MIT
license-file: LICENSE
author: see AUTHORS
maintainer:  borgers@mi.fu-berlin.de
-- A copyright notice.
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  README.md, tests/integration_tests
cabal-version:       >=1.10


executable RailCompiler
  main-is: Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- TODO: Do we need to list anzthing here in other-modules?
  -- LANGUAGE extensions used by modules in this package.
  --other-extensions:    DeriveDataTypeable, GADTs, StandaloneDeriving
  build-depends: base, llvm-general-pure, llvm-general <3.3.12 || (>=3.4 && < 3.4.3), mtl, containers

  -- Directories containing source files.
  hs-source-dirs: src/RailCompiler

  -- Base language which the package is written in.
  default-language:    Haskell2010

executable RailEditor
  main-is: Editor.hs
  build-depends: base, llvm-general-pure, llvm-general < 3.4.3, mtl, containers, transformers, gtk, process, cairo
  hs-source-dirs: src/RailEditor src/RailCompiler
  default-language: Haskell2010

Test-suite testcases
  main-is: Main.hs
  build-depends: base, HUnit, llvm-general-pure, llvm-general < 3.4.3, mtl, containers, process
  hs-source-dirs: tests, src/RailCompiler
  default-language: Haskell2010
  type: exitcode-stdio-1.0
